Update birthday greeting username in index.html

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <div class="userImg">
                         <img src="images/IMG_6648.PNG" alt="">
                     </div>
-                    <h4 class="username">To : Khun Aom Sarunnuch 💖<span class="underline"></span></h4>
+                    <h4 class="username">To : Moo Uan  💖<span class="underline"></span></h4>
 
                     <h3>Happy Birthday</h3>
                     <div class="imageCute">
